kubernetes/projects/entertainment/apps/media-shoko/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoko
  namespace: media
  labels:
    app.kubernetes.io/name: shoko
    app.kubernetes.io/part-of: media-stack
spec:
  type: ClusterIP
  trafficDistribution: PreferSameNode
  selector:
    app.kubernetes.io/name: shoko
  ports:
    - name: http
      port: 8111
      targetPort: http
      protocol: TCP
